--- a/tcamt-lite-client/app/views/profiles.html
+++ b/tcamt-lite-client/app/views/profiles.html
@@ -21,7 +21,7 @@
                                     <div class="col-md-12">
                                         <div class="pull-right">
                                             <button type="button" class="btn btn-info btn-sm" ng-click="openDialogForImportXMLProfile($event);"><i class="fa fa-plus"></i>
-                                                Import Implementation Guide (XML)
+                                                Import Implementation Guide (ZIP)
                                             </button>
                                         </div>
                                         <table st-table="tmpPrivateProfiles" st-safe-src="privateProfiles" class="smart-table table table-striped table-bordered">
